hover for elements, fixed style

--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -14,6 +14,7 @@ $animation_speed: 1.5s;
 $cases_box_shadow: 0 5px 20px 2px rgba(89, 137, 246, 0.25);
 $arrow_box_shadow: 0px 10px 40px rgba(89, 137, 246, 0.25);
 $form_box_shadow: 0px 10px 30px rgba(89, 137, 246, 0.15);
+$hover_box_shadow: 0px 0px 20px 1px #03a9f4ab;
 $border_light_color: #ededed;
 $mobile_nav_bg: linear-gradient(to bottom, rgba(89, 137, 247, 1) 0%, rgba(96, 171, 252, 0.98) 100%);
 
