archive page for post cases

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -38,7 +38,7 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 @import "pages/home-page";
 @import "pages/single-post";
 @import "pages/blog-page";
-//@import "pages/woo";
+@import "pages/archive-cases-page";
 
 //Custom Posts
 @import "custom-posts/reviews";
